--- a/example/example_ntv_pandas.ipynb
+++ b/example/example_ntv_pandas.ipynb
@@ -17,7 +17,7 @@
     "This NoteBook uses examples to present some key points\n",
     "\n",
     "*(active link on jupyter Notebook or Nbviewer)*\n",
-    "- [1 - Simple example](#0---Simple-example)\n",
+    "- [1 - Simple example](#1---Simple-example)\n",
     "- [2 - Series](#2---Series)\n",
     "    - [Simple example](#Simple-example)\n",
     "    - [Typed example](#Typed-example)\n",
@@ -29,7 +29,7 @@
     "    - [Json data can be annotated](#Json-data-can-be-annotated)\n",
     "    - [Categorical data can be included](#Categorical-data-can-be-included)\n",
     "    - [Multidimensional data](#Multidimensional-data)\n",
-    "- [4 - Appendix : Series tests](#4---Appendix-:-Series-tests)     \n",
+    "- [Appendix : Series tests](#Appendix-:-Series-tests)     \n",
     "        \n",
     "### References\n",
     "- [JSON-NTV specification](https://loco-philippe.github.io/ES/JSON%20semantic%20format%20(JSON-NTV).htm)\n",
@@ -1655,7 +1655,7 @@
    "id": "57322f1d",
    "metadata": {},
    "source": [
-    "## 4 - Appendix : Series tests"
+    "## Appendix : Series tests"
    ]
   },
   {
