--- a/example/example_table_pandas.ipynb
+++ b/example/example_table_pandas.ipynb
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "caa1379d",
+   "id": "187fd533",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
    "id": "ca787e67",
    "metadata": {},
    "source": [
-    "## 2 - Series"
+    "## 2 - Example of Series"
    ]
   },
   {
@@ -299,16 +299,17 @@
    "id": "14204c2d",
    "metadata": {},
    "source": [
-    "### Numeric Series\n",
+    "### Numerical Series\n",
     "- TableSchema defines three types `integer`, `boolean` and `number` (`default` format)\n",
     "- additional `format` are used to integrate pandas or NTV data :\n",
-    "    - `intxx`, `uintxx`, `float`, `floatxx` for `number` type where xx is the bits number (as defined in pandas dtype)\n",
+    "    - `float`, `floatxx` for `number` type where xx is the bits number (as defined in pandas dtype)\n",
+    "    - `intxx`, `uintxx` for `integer` type where xx is the bits number (as defined in pandas dtype)\n",
     "    - `day`, `wday`, `yday`, `week`, `hour`, `minute`, `second` for `integer` type "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "62319579",
    "metadata": {},
    "outputs": [
@@ -321,27 +322,63 @@
       "1    2\n",
       "2    3\n",
       "Name: value, dtype: int64\n",
-      "int64\n",
       "\n",
       "Json Table representation :    \n",
-      "{'schema': {'fields': [{'name': 'index', 'type': 'integer'}, {'name': 'value', 'type': 'object'}],\n",
+      "{'schema': {'fields': [{'name': 'index', 'type': 'integer'}, {'name': 'value', 'type': 'integer'}],\n",
       "            'primaryKey': ['index'],\n",
       "            'pandas_version': '1.4.0'},\n",
       " 'data': [{'index': 0, 'value': 1}, {'index': 1, 'value': 2}, {'index': 2, 'value': 3}]}\n",
       "\n",
-      "Is Json translation reversible ?  True\n"
+      "Is Json Table translation reversible ?  True\n"
      ]
     }
    ],
    "source": [
     "sr = pd.Series([1, 2, 3], name='value')\n",
     "print('pandas object :\\n' + str(sr))\n",
-    "print(sr.dtype)\n",
+    "\n",
     "json_table = npd.to_json(sr, table=True)\n",
     "print('\\nJson Table representation :    ')\n",
     "pprint(json_table, width=100, sort_dicts=False)\n",
     "\n",
-    "print('\\nIs Json translation reversible ? ', sr.equals(npd.read_json(json_table)))"
+    "print('\\nIs Json Table translation reversible ? ', sr.equals(npd.read_json(json_table)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f033fc61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reversibility, schema field : \n",
+      "     True ,  {'name': 'value', 'type': 'integer'}\n",
+      "     True ,  {'name': 'value', 'type': 'number'}\n",
+      "     True ,  {'name': 'value', 'type': 'boolean'}\n",
+      "     True ,  {'name': 'value', 'type': 'number', 'format': 'int32'}\n",
+      "     True ,  {'name': 'value', 'type': 'number', 'format': 'uint64'}\n",
+      "     True ,  {'name': 'value', 'type': 'integer', 'format': 'day'}\n",
+      "     True ,  {'name': 'value', 'type': 'number', 'format': 'float32'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_sr = [pd.Series([1, 2, 3],   name='value'),\n",
+    "           pd.Series([1.1, 2, 3], name='value'),\n",
+    "           pd.Series([True, False, True], name='value'),\n",
+    "           # additional types\n",
+    "           pd.Series([1, 2, 3],   name='value', dtype='int32'),\n",
+    "           pd.Series([1, 2, 3],   name='value', dtype='uint64'),\n",
+    "           pd.Series([1, 2, 3],   name='value::day'),\n",
+    "           pd.Series([1.6, 2, 3], name='value', dtype='float32')]\n",
+    "\n",
+    "print('reversibility, schema field : ')\n",
+    "for sr in list_sr:\n",
+    "    json_table = npd.to_json(sr, table=True)\n",
+    "    print('    ', sr.equals(npd.read_json(json_table)), ', ', json_table['schema']['fields'][1])"
    ]
   },
   {
@@ -349,7 +386,50 @@
    "id": "954c6e65",
    "metadata": {},
    "source": [
-    "### Typed example"
+    "### Json Series\n",
+    "- TableSchema defines two types `object` and `array` with `default` format and one type `string` with three formats (`default`, `uri`, `email`)\n",
+    "- additional `format` are used to integrate pandas or NTV data :\n",
+    "    - `file` for `string` type\n",
+    "    - `null`, `object` for `object` type (`object` type defines Json date, `object` format defines 'dict' data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2fc4bcdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reversibility, schema field : \n",
+      "     True ,  {'name': 'value', 'type': 'array'}\n",
+      "     True ,  {'name': 'value', 'type': 'object'}\n",
+      "     True ,  {'name': 'value', 'type': 'string'}\n",
+      "     True ,  {'name': 'value', 'type': 'string', 'format': 'uri'}\n",
+      "     True ,  {'name': 'value', 'type': 'string', 'format': 'email'}\n",
+      "     True ,  {'name': 'value', 'type': 'object', 'format': 'object'}\n",
+      "     True ,  {'name': 'value', 'type': 'string', 'format': 'file'}\n",
+      "     True ,  {'name': 'value', 'type': 'object', 'format': 'null'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_sr = [pd.Series([[1, 2], ['val1', 'val2']],   name='value::array'),\n",
+    "           pd.Series([[1, 2], 3, 'test', {'val1': 5, 'val2': 6}],   name='value'),\n",
+    "           pd.Series(['az', 'er', 'cd'], name='value', dtype='string'),\n",
+    "           pd.Series([\"geo:13.412 ,103.866\", \"mailto:John.Doe@example.com\"], name='value::uri', dtype='string'),\n",
+    "           pd.Series([\"philippe@loco-labs.io\", \"John.Doe@example.com\"], name='value::email', dtype='string'),\n",
+    "\n",
+    "           pd.Series([{'val1': 5, 'val2': 6}, {'val1': 5.1, 'val2': 6.1}],   name='value::object'),\n",
+    "           pd.Series([\"///path/to/file\", \"//host.example.com/path/to/file\"], name='value::file', dtype='string'),\n",
+    "           pd.Series([None, None, None], name='value::null')]\n",
+    "\n",
+    "print('reversibility, schema field : ')\n",
+    "for sr in list_sr:\n",
+    "    json_table = npd.to_json(sr, table=True)\n",
+    "    print('    ', sr.equals(npd.read_json(json_table)), ', ', json_table['schema']['fields'][1])"
    ]
   },
   {
@@ -1453,8 +1533,8 @@
        "Coordinates:\n",
        "  * quantity  (quantity) object &#x27;1 kg&#x27; &#x27;10 kg&#x27;\n",
        "  * product   (product) object &#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;\n",
-       "    plants    (product) object &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'price'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>quantity</span>: 2</li><li><span class='xr-has-index'>product</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-efe4152e-0e07-41cd-b13f-6ce66c32335d' class='xr-array-in' type='checkbox' checked><label for='section-efe4152e-0e07-41cd-b13f-6ce66c32335d' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.5 2.0 1.0 1.5 5.0 20.0 10.0 15.0</span></div><div class='xr-array-data'><pre>array([[0.5, 2.0, 1.0, 1.5],\n",
-       "       [5.0, 20.0, 10.0, 15.0]], dtype=object)</pre></div></div></li><li class='xr-section-item'><input id='section-db7ac532-60e8-4360-bc3c-d10cadb3b83d' class='xr-section-summary-in' type='checkbox'  checked><label for='section-db7ac532-60e8-4360-bc3c-d10cadb3b83d' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>quantity</span></div><div class='xr-var-dims'>(quantity)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;1 kg&#x27; &#x27;10 kg&#x27;</div><input id='attrs-4d345e62-831b-424b-a792-35c84ad14687' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-4d345e62-831b-424b-a792-35c84ad14687' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-24a41939-355e-403b-9155-53aa44c0fc7a' class='xr-var-data-in' type='checkbox'><label for='data-24a41939-355e-403b-9155-53aa44c0fc7a' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>product</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;</div><input id='attrs-51066e66-a484-4d0b-bafa-38575a413501' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-51066e66-a484-4d0b-bafa-38575a413501' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-c7fc1251-1aed-4c08-a7dd-7ac6e44f1cfb' class='xr-var-data-in' type='checkbox'><label for='data-c7fc1251-1aed-4c08-a7dd-7ac6e44f1cfb' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>plants</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</div><input id='attrs-e2bf4c37-067a-4824-865c-cf3260accf53' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e2bf4c37-067a-4824-865c-cf3260accf53' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-285fad25-a593-4568-969d-8c80aab9c2f2' class='xr-var-data-in' type='checkbox'><label for='data-285fad25-a593-4568-969d-8c80aab9c2f2' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;vegetable&#x27;], dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-16831726-8d68-4eab-91a9-b1efbe699159' class='xr-section-summary-in' type='checkbox'  ><label for='section-16831726-8d68-4eab-91a9-b1efbe699159' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>quantity</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-d2657624-727c-4b1a-8c8b-798ed8d90921' class='xr-index-data-in' type='checkbox'/><label for='index-d2657624-727c-4b1a-8c8b-798ed8d90921' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=&#x27;object&#x27;, name=&#x27;quantity&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>product</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-b8e056f7-9b78-4c4e-9ae6-ddecc1303c39' class='xr-index-data-in' type='checkbox'/><label for='index-b8e056f7-9b78-4c4e-9ae6-ddecc1303c39' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=&#x27;object&#x27;, name=&#x27;product&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-5708df34-672d-435f-84b8-6ba0e4360a45' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-5708df34-672d-435f-84b8-6ba0e4360a45' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "    plants    (product) object &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'price'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>quantity</span>: 2</li><li><span class='xr-has-index'>product</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-bc995b56-3fb8-4085-b1d8-b449819e9302' class='xr-array-in' type='checkbox' checked><label for='section-bc995b56-3fb8-4085-b1d8-b449819e9302' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.5 2.0 1.0 1.5 5.0 20.0 10.0 15.0</span></div><div class='xr-array-data'><pre>array([[0.5, 2.0, 1.0, 1.5],\n",
+       "       [5.0, 20.0, 10.0, 15.0]], dtype=object)</pre></div></div></li><li class='xr-section-item'><input id='section-bc0fc5e2-a45e-4732-b495-f21a49f536ff' class='xr-section-summary-in' type='checkbox'  checked><label for='section-bc0fc5e2-a45e-4732-b495-f21a49f536ff' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>quantity</span></div><div class='xr-var-dims'>(quantity)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;1 kg&#x27; &#x27;10 kg&#x27;</div><input id='attrs-5350d690-6f9f-4cee-b11b-6b047fa67401' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-5350d690-6f9f-4cee-b11b-6b047fa67401' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-2b2e7d21-33e5-4ba3-82b2-d26384afa88e' class='xr-var-data-in' type='checkbox'><label for='data-2b2e7d21-33e5-4ba3-82b2-d26384afa88e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>product</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;</div><input id='attrs-5cb49161-6913-4883-a64a-f56f94db85e6' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-5cb49161-6913-4883-a64a-f56f94db85e6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e141907f-2f22-4424-9ae3-2fdb4a8ff99c' class='xr-var-data-in' type='checkbox'><label for='data-e141907f-2f22-4424-9ae3-2fdb4a8ff99c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>plants</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</div><input id='attrs-f81ddc7a-b89a-4f65-ada7-8d62594e6a66' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-f81ddc7a-b89a-4f65-ada7-8d62594e6a66' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e8a22085-c726-422f-9b51-20b381e1a0d8' class='xr-var-data-in' type='checkbox'><label for='data-e8a22085-c726-422f-9b51-20b381e1a0d8' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;vegetable&#x27;], dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-e9ee6705-682f-49de-84f4-6fee6b758129' class='xr-section-summary-in' type='checkbox'  ><label for='section-e9ee6705-682f-49de-84f4-6fee6b758129' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>quantity</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-86ebe700-b709-47d4-820c-d2e9648a4a3f' class='xr-index-data-in' type='checkbox'/><label for='index-86ebe700-b709-47d4-820c-d2e9648a4a3f' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=&#x27;object&#x27;, name=&#x27;quantity&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>product</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-3f869fc4-c579-4893-9ebd-e2795c4092f2' class='xr-index-data-in' type='checkbox'/><label for='index-3f869fc4-c579-4893-9ebd-e2795c4092f2' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=&#x27;object&#x27;, name=&#x27;product&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-77eca1e1-148f-4a02-b450-6e2af7d7daec' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-77eca1e1-148f-4a02-b450-6e2af7d7daec' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'price' (quantity: 2, product: 4)>\n",
