--- a/example/example_table_pandas.ipynb
+++ b/example/example_table_pandas.ipynb
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b76d73f6",
+   "id": "839f3c07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,10 +300,10 @@
    "metadata": {},
    "source": [
     "### Numerical Series\n",
-    "- TableSchema defines three types `integer`, `boolean` and `number` (`default` format)\n",
+    "- TableSchema defines three types `integer`, `boolean` and `number` (with `default` format)\n",
     "- additional `format` are used to integrate pandas or NTV data :\n",
-    "    - `float`, `floatxx` for `number` type where xx is the bits number (as defined in pandas dtype)\n",
-    "    - `intxx`, `uintxx` for `integer` type where xx is the bits number (as defined in pandas dtype)"
+    "    - `float`, `floatxx` for `number` type where xx is the bit's lenght (as defined in pandas dtype)\n",
+    "    - `intxx`, `uintxx` for `integer` type where xx is the bit's lenght (as defined in pandas dtype)"
    ]
   },
   {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "df82435d",
+   "id": "51ac2a61",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9ac10d7b",
+   "id": "5c3ad7f0",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8885fc32",
+   "id": "c867bc2a",
    "metadata": {},
    "source": [
     "### Datation Series\n",
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4970887e",
+   "id": "e6641182",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d85ff61b",
+   "id": "9709eeb9",
    "metadata": {},
    "source": [
     "### Location Series\n",
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "66197437",
+   "id": "961a98cc",
    "metadata": {},
    "outputs": [
     {
@@ -534,242 +534,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "a556868a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pandas object :\n",
-      "0    1964-01-01\n",
-      "1    1985-01-01\n",
-      "2    2022-01-01\n",
-      "Name: new year::date, dtype: object\n",
-      "\n",
-      "Json Table representation :    \n",
-      "{'schema': {'fields': [{'name': 'index', 'type': 'integer'}, {'name': 'new year', 'type': 'date'}],\n",
-      "            'primaryKey': ['index'],\n",
-      "            'pandas_version': '1.4.0'},\n",
-      " 'data': [{'index': 0, 'new year': '1964-01-01'},\n",
-      "          {'index': 1, 'new year': '1985-01-01'},\n",
-      "          {'index': 2, 'new year': '2022-01-01'}]}\n",
-      "\n",
-      "Is Json translation reversible ?  True\n"
-     ]
-    }
-   ],
-   "source": [
-    "sr = pd.Series([date(1964, 1, 1), date(1985, 1, 1), date(2022, 1, 1)], name='new year::date')\n",
-    "print('pandas object :\\n' + str(sr))\n",
-    "\n",
-    "json_table = npd.to_json(sr, table=True)\n",
-    "print('\\nJson Table representation :    ')\n",
-    "pprint(json_table, width=120, sort_dicts=False)\n",
-    "\n",
-    "print('\\nIs Json translation reversible ? ', sr.equals(npd.read_json(json_table)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bbef79a9",
-   "metadata": {},
-   "source": [
-    "### Examples with a non-Pandas type"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "765f0396",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pandas object :\n",
-      "0    1964-01-01\n",
-      "1    1985-02-05\n",
-      "2    2022-01-21\n",
-      "Name: dates::date, dtype: object\n",
-      "\n",
-      "Json representation : \n",
-      "     {':field': {'dates::date': ['1964-01-01', '1985-02-05', '2022-01-21']}}\n",
-      "\n",
-      "is Json translation reversible ?  True\n",
-      "\n",
-      "is pandas translation reversible ?  True\n"
-     ]
-    }
-   ],
-   "source": [
-    "field_data = {'dates::date': ['1964-01-01', '1985-02-05', '2022-01-21']}\n",
-    "sr = npd.read_json({':field': field_data})\n",
-    "# pandas dtype conform to Ntv type\n",
-    "print('pandas object :\\n' + str(sr))\n",
-    "print('\\nJson representation : \\n    ', npd.to_json(sr))\n",
-    "print('\\nis Json translation reversible ? ', sr.equals(npd.read_json(npd.to_json(sr))))\n",
-    "print('\\nis pandas translation reversible ? ', json.dumps(npd.to_json(sr)) == json.dumps({':field': field_data}))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "327c67a9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pandas object :\n",
-      "0    POINT (1 2)\n",
-      "1    POINT (3 4)\n",
-      "2    POINT (5 6)\n",
-      "Name: coord::point, dtype: object\n",
-      "\n",
-      "Json representation : \n",
-      "     {':field': {'coord::point': [[1.0, 2.0], [3.0, 4.0], [5.0, 6.0]]}}\n",
-      "\n",
-      "is Json translation reversible ?  True\n"
-     ]
-    }
-   ],
-   "source": [
-    "field_data = {'coord::point':    [[1,2], [3,4], [5,6]]}\n",
-    "sr = npd.read_json({':field': field_data})\n",
-    "# pandas dtype conform to Ntv type\n",
-    "print('pandas object :\\n' + str(sr))\n",
-    "print('\\nJson representation : \\n    ', npd.to_json(sr))\n",
-    "print('\\nis Json translation reversible ? ', sr.equals(npd.read_json(npd.to_json(sr))))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "90a68b81",
-   "metadata": {},
-   "source": [
-    "### Categorical examples\n",
-    "- available only with hashable data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "6ba57f0a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pandas object :\n",
-      "0    1\n",
-      "1    2\n",
-      "2    2\n",
-      "3    1\n",
-      "Name: integer, dtype: category\n",
-      "Categories (2, Int64): [1, 2]\n",
-      "\n",
-      "Json representation : \n",
-      "     {':field': {'integer': [[1, 2], [0, 1, 1, 0]]}}\n",
-      "\n",
-      "is Json translation reversible ?  True\n",
-      "\n",
-      "is pandas translation reversible ?  True\n"
-     ]
-    }
-   ],
-   "source": [
-    "field_data = {\"integer\": [[1, 2], [0, 1, 1, 0]]}\n",
-    "sr = npd.read_json({':field': field_data})\n",
-    "# pandas dtype conform to Ntv type\n",
-    "print('pandas object :\\n' + str(sr))\n",
-    "print('\\nJson representation : \\n    ', npd.to_json(sr))\n",
-    "print('\\nis Json translation reversible ? ', sr.equals(npd.read_json(npd.to_json(sr))))\n",
-    "print('\\nis pandas translation reversible ? ', json.dumps(npd.to_json(sr)) == json.dumps({':field': field_data}))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "7e45d94d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pandas object :\n",
-      "0    1964-01-01\n",
-      "1    1985-02-05\n",
-      "2    1964-01-01\n",
-      "3    2022-01-21\n",
-      "Name: dates::date, dtype: category\n",
-      "Categories (3, object): [1964-01-01, 1985-02-05, 2022-01-21]\n",
-      "\n",
-      "Json representation : \n",
-      "     {':field': {'dates': [{'::date': ['1964-01-01', '1985-02-05', '2022-01-21']}, [0, 1, 0, 2]]}}\n",
-      "\n",
-      "is Json translation reversible ?  True\n"
-     ]
-    }
-   ],
-   "source": [
-    "field_data = {'dates': [{'::date': ['1964-01-01', '1985-02-05', '2022-01-21']}, [0, 1, 0, 2]]}\n",
-    "sr = npd.read_json({':field': field_data})\n",
-    "# pandas dtype conform to Ntv type\n",
-    "print('pandas object :\\n' + str(sr))\n",
-    "print('\\nJson representation : \\n    ', npd.to_json(sr))\n",
-    "print('\\nis Json translation reversible ? ', sr.equals(npd.read_json(npd.to_json(sr))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "a4a756e7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pandas object :\n",
-      "0    (1, 2)\n",
-      "1    (3, 4)\n",
-      "2    (1, 2)\n",
-      "3    (5, 6)\n",
-      "Name: test_array::array, dtype: category\n",
-      "Categories (3, object): [(1, 2), (3, 4), (5, 6)]\n",
-      "\n",
-      "Json representation : \n",
-      "     {':field': {'test_array': [{'::array': [(1, 2), (3, 4), (5, 6)]}, [0, 1, 0, 2]]}}\n",
-      "\n",
-      "is Json translation reversible ?  True\n",
-      "\n",
-      "is pandas translation reversible ?  True\n"
-     ]
-    }
-   ],
-   "source": [
-    "field_data = {'test_array': [{'::array': [[1,2], [3,4], [5,6]]}, [0, 1, 0, 2]]}\n",
-    "sr = npd.read_json({':field': field_data})\n",
-    "# pandas dtype conform to Ntv type\n",
-    "print('pandas object :\\n' + str(sr))\n",
-    "print('\\nJson representation : \\n    ', npd.to_json(sr))\n",
-    "print('\\nis Json translation reversible ? ', sr.equals(npd.read_json(npd.to_json(sr))))\n",
-    "print('\\nis pandas translation reversible ? ', json.dumps(npd.to_json(sr)) == json.dumps({':field': field_data}))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "38335df3",
    "metadata": {},
    "source": [
-    "## 3 - DataFrame"
+    "## 3 - DataFrame\n",
+    "As used for the Series, DataFrame follow the same implementation. The Example below used some of Series used in previous example."
    ]
   },
   {
@@ -777,12 +547,12 @@
    "id": "fb4a7b88",
    "metadata": {},
    "source": [
-    "### Initial example"
+    "### Complete example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "ac890bcb",
    "metadata": {},
    "outputs": [
@@ -790,32 +560,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pandas dtype :\n",
-      "A    object\n",
-      "B    object\n",
-      "dtype: object\n",
       "\n",
       "pandas object :\n",
-      "   A  B\n",
-      "0  a  b\n",
-      "1  b  c\n",
-      "2  c  c\n",
-      "3  a  d\n",
+      "   float  boolean  int32        ex1::array                    json string  \\\n",
+      "0    1.1     True      1            [1, 2]                  [1, 2]     az   \n",
+      "1    2.0    False      2      [val1, val2]                       3     er   \n",
+      "2    3.0    False      3  [1, {'val3': 3}]                    test     cd   \n",
+      "3    4.0     True      4                []  {'val1': 5, 'val2': 6}     uf   \n",
       "\n",
-      "Json representation : \n",
-      "     {':tab': {'index': [0, 1, 2, 3], 'A': ['a', 'b', 'c', 'a'], 'B': ['b', 'c', 'c', 'd']}}\n",
+      "                      ex2::uri             ex3::email  \\\n",
+      "0          geo:13.412 ,103.866  philippe@loco-labs.io   \n",
+      "1  mailto:John.Doe@example.com   John.Doe@example.com   \n",
+      "2                                                       \n",
+      "3                                                       \n",
+      "\n",
+      "                  ex4::object  \n",
+      "0      {'val1': 5, 'val2': 6}  \n",
+      "1  {'val1': 5.1, 'val2': 6.1}  \n",
+      "2                          {}  \n",
+      "3                          {}  \n",
+      "\n",
+      "Json Table representation :    \n",
+      "{'schema': {'fields': [{'name': 'index', 'type': 'integer'},\n",
+      "                       {'name': 'float', 'type': 'number'},\n",
+      "                       {'name': 'boolean', 'type': 'boolean'},\n",
+      "                       {'name': 'int32', 'type': 'integer', 'format': 'int32'},\n",
+      "                       {'name': 'ex1', 'type': 'array'},\n",
+      "                       {'name': 'json', 'type': 'object'},\n",
+      "                       {'name': 'string', 'type': 'string'},\n",
+      "                       {'name': 'ex2', 'type': 'string', 'format': 'uri'},\n",
+      "                       {'name': 'ex3', 'type': 'string', 'format': 'email'},\n",
+      "                       {'name': 'ex4', 'type': 'object', 'format': 'object'}],\n",
+      "            'primaryKey': ['index'],\n",
+      "            'pandas_version': '1.4.0'},\n",
+      " 'data': [{'index': 0,\n",
+      "           'float': 1.1,\n",
+      "           'boolean': True,\n",
+      "           'int32': 1,\n",
+      "           'ex1': [1, 2],\n",
+      "           'json': [1, 2],\n",
+      "           'string': 'az',\n",
+      "           'ex2': 'geo:13.412 ,103.866',\n",
+      "           'ex3': 'philippe@loco-labs.io',\n",
+      "           'ex4': {'val1': 5, 'val2': 6}},\n",
+      "          {'index': 1,\n",
+      "           'float': 2.0,\n",
+      "           'boolean': False,\n",
+      "           'int32': 2,\n",
+      "           'ex1': ['val1', 'val2'],\n",
+      "           'json': 3,\n",
+      "           'string': 'er',\n",
+      "           'ex2': 'mailto:John.Doe@example.com',\n",
+      "           'ex3': 'John.Doe@example.com',\n",
+      "           'ex4': {'val1': 5.1, 'val2': 6.1}},\n",
+      "          {'index': 2,\n",
+      "           'float': 3.0,\n",
+      "           'boolean': False,\n",
+      "           'int32': 3,\n",
+      "           'ex1': [1, {'val3': 3}],\n",
+      "           'json': 'test',\n",
+      "           'string': 'cd',\n",
+      "           'ex2': '',\n",
+      "           'ex3': '',\n",
+      "           'ex4': {}},\n",
+      "          {'index': 3,\n",
+      "           'float': 4.0,\n",
+      "           'boolean': True,\n",
+      "           'int32': 4,\n",
+      "           'ex1': [],\n",
+      "           'json': {'val1': 5, 'val2': 6},\n",
+      "           'string': 'uf',\n",
+      "           'ex2': '',\n",
+      "           'ex3': '',\n",
+      "           'ex4': {}}]}\n",
       "\n",
       "is Json translation reversible ?  True\n"
      ]
     }
    ],
    "source": [
-    "df = pd.DataFrame({\"A\": list(\"abca\"), \"B\": list(\"bccd\")})\n",
+    "df = pd.DataFrame({\n",
+    "         'float':       pd.Series([1.1, 2, 3, 4]),\n",
+    "         'boolean':     pd.Series([True, False, False, True]),\n",
+    "         'int32':       pd.Series([1, 2, 3, 4],   dtype='int32'),\n",
+    "         'ex1::array':  pd.Series([[1, 2], ['val1', 'val2'], [1, {'val3': 3}], []]),\n",
+    "         'json':        pd.Series([[1, 2], 3, 'test', {'val1': 5, 'val2': 6}]),\n",
+    "         'string':      pd.Series(['az', 'er', 'cd', 'uf'], dtype='string'),\n",
+    "         'ex2::uri':    pd.Series([\"geo:13.412 ,103.866\", \"mailto:John.Doe@example.com\", \"\", \"\"], dtype='string'),\n",
+    "         'ex3::email':  pd.Series([\"philippe@loco-labs.io\", \"John.Doe@example.com\", \"\", \"\"], dtype='string'),\n",
+    "         'ex4::object': pd.Series([{'val1': 5, 'val2': 6}, {'val1': 5.1, 'val2': 6.1}, {}, {}])\n",
+    "})\n",
     "\n",
-    "print('pandas dtype :\\n' + str(df.dtypes))\n",
-    "print('\\npandas object :\\n' + str(df))\n",
-    "print('\\nJson representation : \\n    ', npd.to_json(df))\n",
-    "print('\\nis Json translation reversible ? ', df.equals(npd.read_json(npd.to_json(df))))"
+    "#print('\\npandas object :\\n' + str(df))\n",
+    "print('\\nJson Table representation :    ')\n",
+    "pprint(npd.to_json(df, table=True), width=100, sort_dicts=False)\n",
+    "print('\\nis Json translation reversible ? ', df.equals(npd.read_json(npd.to_json(df, table=True))))"
    ]
   },
   {
