--- a/example/example_table_pandas.ipynb
+++ b/example/example_table_pandas.ipynb
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d3b8c454",
+   "id": "31b69c58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c04ca690",
+   "id": "3a0c17f2",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8f70d159",
+   "id": "8d76cbb1",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bbf6248",
+   "id": "7655b357",
    "metadata": {},
    "source": [
     "### Datation Series\n",
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e66e8952",
+   "id": "911c6cd8",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8348ae7f",
+   "id": "585b0a9d",
    "metadata": {},
    "source": [
     "### Location Series\n",
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bb506ad0",
+   "id": "55328989",
    "metadata": {},
    "outputs": [
     {
@@ -675,153 +675,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "192b18d5",
+   "execution_count": 33,
+   "id": "b95a467e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dates::date</th>\n",
+       "      <th>value</th>\n",
+       "      <th>value32</th>\n",
+       "      <th>res</th>\n",
+       "      <th>coord::point</th>\n",
+       "      <th>names</th>\n",
+       "      <th>unique</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>1964-01-01</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>POINT (1 2)</td>\n",
+       "      <td>john</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>1985-02-05</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>20</td>\n",
+       "      <td>POINT (3 4)</td>\n",
+       "      <td>eric</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300</th>\n",
+       "      <td>2022-01-21</td>\n",
+       "      <td>20</td>\n",
+       "      <td>22</td>\n",
+       "      <td>30</td>\n",
+       "      <td>POINT (5 6)</td>\n",
+       "      <td>judith</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400</th>\n",
+       "      <td>1964-01-01</td>\n",
+       "      <td>20</td>\n",
+       "      <td>22</td>\n",
+       "      <td>10</td>\n",
+       "      <td>POINT (7 8)</td>\n",
+       "      <td>mila</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>500</th>\n",
+       "      <td>1985-02-05</td>\n",
+       "      <td>30</td>\n",
+       "      <td>32</td>\n",
+       "      <td>20</td>\n",
+       "      <td>POINT (3 4)</td>\n",
+       "      <td>hector</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>600</th>\n",
+       "      <td>2022-01-21</td>\n",
+       "      <td>30</td>\n",
+       "      <td>32</td>\n",
+       "      <td>30</td>\n",
+       "      <td>POINT (5 6)</td>\n",
+       "      <td>maria</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    dates::date  value  value32  res coord::point   names  unique\n",
+       "100  1964-01-01     10       12   10  POINT (1 2)    john    True\n",
+       "200  1985-02-05     10       12   20  POINT (3 4)    eric    True\n",
+       "300  2022-01-21     20       22   30  POINT (5 6)  judith    True\n",
+       "400  1964-01-01     20       22   10  POINT (7 8)    mila    True\n",
+       "500  1985-02-05     30       32   20  POINT (3 4)  hector    True\n",
+       "600  2022-01-21     30       32   30  POINT (5 6)   maria    True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = {'index':           [100, 200, 300, 400, 500, 600],\n",
-    "                'dates::date':     pd.Series([date(1964,1,1), date(1985,2,5), date(2022,1,21), date(1964,1,1), date(1985,2,5), date(2022,1,21)]),\n",
+    "                'dates::date':     [date(1964,1,1), date(1985,2,5), date(2022,1,21), date(1964,1,1), date(1985,2,5), date(2022,1,21)],\n",
     "                'value':           [10, 10, 20, 20, 30, 30],\n",
     "                'value32':         pd.Series([12, 12, 22, 22, 32, 32], dtype='int32'),\n",
     "                'res':             [10, 20, 30, 10, 20, 30],\n",
-    "                'coord::point':    pd.Series([Point(1,2), Point(3,4), Point(5,6), Point(7,8), Point(3,4), Point(5,6)]),\n",
+    "                'coord::point':    [Point(1,2), Point(3,4), Point(5,6), Point(7,8), Point(3,4), Point(5,6)],\n",
     "                'names':           pd.Series(['john', 'eric', 'judith', 'mila', 'hector', 'maria'], dtype='string'),\n",
     "                'unique':          True }\n",
-    "df = pd.DataFrame(data).set_index('index')\n"
+    "df = pd.DataFrame(data).set_index('index')\n",
+    "df.index.name = None\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "914d02ff",
+   "execution_count": 29,
+   "id": "e86439f4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{':tab': {'coord::point': [[1.0, 2.0], [3.0, 4.0], [5.0, 6.0], [7.0, 8.0], [3.0, 4.0], [5.0, 6.0]],\n",
+      "{':tab': {'index': [100, 200, 300, 400, 500, 600],\n",
       "          'dates::date': ['1964-01-01', '1985-02-05', '2022-01-21', '1964-01-01', '1985-02-05', '2022-01-21'],\n",
-      "          'index': [100, 200, 300, 400, 500, 600],\n",
-      "          'names::string': ['john', 'eric', 'judith', 'mila', 'hector', 'maria'],\n",
-      "          'res': [10, 20, 30, 10, 20, 30],\n",
-      "          'unique': True,\n",
       "          'value': [10, 10, 20, 20, 30, 30],\n",
-      "          'value32::int32': [12, 12, 22, 22, 32, 32]}}\n"
+      "          'value32::int32': [12, 12, 22, 22, 32, 32],\n",
+      "          'res': [10, 20, 30, 10, 20, 30],\n",
+      "          'coord::point': [[1.0, 2.0], [3.0, 4.0], [5.0, 6.0], [7.0, 8.0], [3.0, 4.0], [5.0, 6.0]],\n",
+      "          'names::string': ['john', 'eric', 'judith', 'mila', 'hector', 'maria'],\n",
+      "          'unique': True}}\n",
+      "True\n"
      ]
     }
    ],
    "source": [
     "df_to_json = npd.to_json(df)\n",
-    "pprint(df_to_json, compact=True, width=120)"
+    "pprint(df_to_json, compact=True, width=120, sort_dicts=False)\n",
+    "print(npd.read_json(df_to_json).equals(df))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ee77e686",
+   "execution_count": 32,
+   "id": "c36ec385",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'data': [{'coord': [1.0, 2.0],\n",
-      "           'dates': '1964-01-01',\n",
-      "           'index': 100,\n",
-      "           'names': 'john',\n",
-      "           'res': 10,\n",
-      "           'unique': True,\n",
-      "           'value': 10,\n",
-      "           'value32': 12},\n",
-      "          {'coord': [3.0, 4.0],\n",
-      "           'dates': '1985-02-05',\n",
-      "           'index': 200,\n",
-      "           'names': 'eric',\n",
-      "           'res': 20,\n",
-      "           'unique': True,\n",
-      "           'value': 10,\n",
-      "           'value32': 12},\n",
-      "          {'coord': [5.0, 6.0],\n",
-      "           'dates': '2022-01-21',\n",
-      "           'index': 300,\n",
-      "           'names': 'judith',\n",
-      "           'res': 30,\n",
-      "           'unique': True,\n",
-      "           'value': 20,\n",
-      "           'value32': 22},\n",
-      "          {'coord': [7.0, 8.0],\n",
-      "           'dates': '1964-01-01',\n",
-      "           'index': 400,\n",
-      "           'names': 'mila',\n",
-      "           'res': 10,\n",
-      "           'unique': True,\n",
-      "           'value': 20,\n",
-      "           'value32': 22},\n",
-      "          {'coord': [3.0, 4.0],\n",
-      "           'dates': '1985-02-05',\n",
-      "           'index': 500,\n",
-      "           'names': 'hector',\n",
-      "           'res': 20,\n",
-      "           'unique': True,\n",
-      "           'value': 30,\n",
-      "           'value32': 32},\n",
-      "          {'coord': [5.0, 6.0],\n",
-      "           'dates': '2022-01-21',\n",
-      "           'index': 600,\n",
-      "           'names': 'maria',\n",
-      "           'res': 30,\n",
-      "           'unique': True,\n",
-      "           'value': 30,\n",
-      "           'value32': 32}],\n",
-      " 'schema': {'fields': [{'name': 'index', 'type': 'integer'}, {'name': 'dates', 'type': 'date'},\n",
-      "                       {'name': 'value', 'type': 'integer'}, {'format': 'int32', 'name': 'value32', 'type': 'integer'},\n",
-      "                       {'name': 'res', 'type': 'integer'}, {'format': 'array', 'name': 'coord', 'type': 'geopoint'},\n",
-      "                       {'name': 'names', 'type': 'string'}, {'name': 'unique', 'type': 'boolean'}],\n",
-      "            'pandas_version': '1.4.0',\n",
-      "            'primaryKey': ['index']}}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:486: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  tab_val = json.loads(srs.to_json(orient='table',\n",
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:486: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  tab_val = json.loads(srs.to_json(orient='table',\n",
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:486: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  tab_val = json.loads(srs.to_json(orient='table',\n",
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:486: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  tab_val = json.loads(srs.to_json(orient='table',\n",
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:486: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  tab_val = json.loads(srs.to_json(orient='table',\n",
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:486: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  tab_val = json.loads(srs.to_json(orient='table',\n",
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:486: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  tab_val = json.loads(srs.to_json(orient='table',\n",
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:160: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  table_val = json.loads(df2.to_json(orient='table',\n",
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:486: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  tab_val = json.loads(srs.to_json(orient='table',\n",
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:486: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  tab_val = json.loads(srs.to_json(orient='table',\n",
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:486: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  tab_val = json.loads(srs.to_json(orient='table',\n",
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:486: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  tab_val = json.loads(srs.to_json(orient='table',\n",
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:486: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  tab_val = json.loads(srs.to_json(orient='table',\n",
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:486: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  tab_val = json.loads(srs.to_json(orient='table',\n",
-      "C:\\Users\\phili\\github\\ntv-pandas\\ntv_pandas\\pandas_ntv_connector.py:486: UserWarning: Index name of 'index' is not round-trippable.\n",
-      "  tab_val = json.loads(srs.to_json(orient='table',\n"
+      "{'index': 100,\n",
+      " 'dates': '1964-01-01',\n",
+      " 'value': 10,\n",
+      " 'value32': 12,\n",
+      " 'res': 10,\n",
+      " 'coord': [1.0, 2.0],\n",
+      " 'names': 'john',\n",
+      " 'unique': True}\n",
+      "{'fields': [{'name': 'index', 'type': 'integer'},\n",
+      "            {'name': 'dates', 'type': 'date'},\n",
+      "            {'name': 'value', 'type': 'integer'},\n",
+      "            {'name': 'value32', 'type': 'integer', 'format': 'int32'},\n",
+      "            {'name': 'res', 'type': 'integer'},\n",
+      "            {'name': 'coord', 'type': 'geopoint', 'format': 'array'},\n",
+      "            {'name': 'names', 'type': 'string'},\n",
+      "            {'name': 'unique', 'type': 'boolean'}],\n",
+      " 'primaryKey': ['index'],\n",
+      " 'pandas_version': '1.4.0'}\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "pprint(npd.to_json(df, table=True), compact=True, width=120)"
+    "df_to_table = npd.to_json(df, table=True)\n",
+    "pprint(df_to_table['data'][0], sort_dicts=False)\n",
+    "pprint(df_to_table['schema'], sort_dicts=False)\n",
+    "print(npd.read_json(df_to_table).equals(df))"
    ]
   }
  ],
