--- a/example/example_table_pandas.ipynb
+++ b/example/example_table_pandas.ipynb
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "31b69c58",
+   "id": "2bd336cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3a0c17f2",
+   "id": "33cb3cae",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8d76cbb1",
+   "id": "853ca958",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7655b357",
+   "id": "0be7c552",
    "metadata": {},
    "source": [
     "### Datation Series\n",
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "911c6cd8",
+   "id": "4d6b513d",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "585b0a9d",
+   "id": "060935ab",
    "metadata": {},
    "source": [
     "### Location Series\n",
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "55328989",
+   "id": "599ea7ec",
    "metadata": {},
    "outputs": [
     {
@@ -675,8 +675,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "b95a467e",
+   "execution_count": 34,
+   "id": "2ebb28a0",
    "metadata": {},
    "outputs": [
     {
@@ -760,16 +760,6 @@
        "      <td>hector</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>600</th>\n",
-       "      <td>2022-01-21</td>\n",
-       "      <td>30</td>\n",
-       "      <td>32</td>\n",
-       "      <td>30</td>\n",
-       "      <td>POINT (5 6)</td>\n",
-       "      <td>maria</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -780,23 +770,22 @@
        "200  1985-02-05     10       12   20  POINT (3 4)    eric    True\n",
        "300  2022-01-21     20       22   30  POINT (5 6)  judith    True\n",
        "400  1964-01-01     20       22   10  POINT (7 8)    mila    True\n",
-       "500  1985-02-05     30       32   20  POINT (3 4)  hector    True\n",
-       "600  2022-01-21     30       32   30  POINT (5 6)   maria    True"
+       "500  1985-02-05     30       32   20  POINT (3 4)  hector    True"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = {'index':           [100, 200, 300, 400, 500, 600],\n",
-    "                'dates::date':     [date(1964,1,1), date(1985,2,5), date(2022,1,21), date(1964,1,1), date(1985,2,5), date(2022,1,21)],\n",
-    "                'value':           [10, 10, 20, 20, 30, 30],\n",
-    "                'value32':         pd.Series([12, 12, 22, 22, 32, 32], dtype='int32'),\n",
-    "                'res':             [10, 20, 30, 10, 20, 30],\n",
-    "                'coord::point':    [Point(1,2), Point(3,4), Point(5,6), Point(7,8), Point(3,4), Point(5,6)],\n",
-    "                'names':           pd.Series(['john', 'eric', 'judith', 'mila', 'hector', 'maria'], dtype='string'),\n",
+    "data = {'index':           [100, 200, 300, 400, 500],\n",
+    "                'dates::date':     [date(1964,1,1), date(1985,2,5), date(2022,1,21), date(1964,1,1), date(1985,2,5)],\n",
+    "                'value':           [10, 10, 20, 20, 30],\n",
+    "                'value32':         pd.Series([12, 12, 22, 22, 32], dtype='int32'),\n",
+    "                'res':             [10, 20, 30, 10, 20],\n",
+    "                'coord::point':    [Point(1,2), Point(3,4), Point(5,6), Point(7,8), Point(3,4)],\n",
+    "                'names':           pd.Series(['john', 'eric', 'judith', 'mila', 'hector'], dtype='string'),\n",
     "                'unique':          True }\n",
     "df = pd.DataFrame(data).set_index('index')\n",
     "df.index.name = None\n",
@@ -805,21 +794,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "e86439f4",
+   "execution_count": 38,
+   "id": "7977522d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{':tab': {'index': [100, 200, 300, 400, 500, 600],\n",
-      "          'dates::date': ['1964-01-01', '1985-02-05', '2022-01-21', '1964-01-01', '1985-02-05', '2022-01-21'],\n",
-      "          'value': [10, 10, 20, 20, 30, 30],\n",
-      "          'value32::int32': [12, 12, 22, 22, 32, 32],\n",
-      "          'res': [10, 20, 30, 10, 20, 30],\n",
-      "          'coord::point': [[1.0, 2.0], [3.0, 4.0], [5.0, 6.0], [7.0, 8.0], [3.0, 4.0], [5.0, 6.0]],\n",
-      "          'names::string': ['john', 'eric', 'judith', 'mila', 'hector', 'maria'],\n",
+      "{':tab': {'index': [100, 200, 300, 400, 500],\n",
+      "          'dates::date': ['1964-01-01', '1985-02-05', '2022-01-21', '1964-01-01', '1985-02-05'],\n",
+      "          'value': [10, 10, 20, 20, 30],\n",
+      "          'value32::int32': [12, 12, 22, 22, 32],\n",
+      "          'res': [10, 20, 30, 10, 20],\n",
+      "          'coord::point': [[1.0, 2.0], [3.0, 4.0], [5.0, 6.0], [7.0, 8.0], [3.0, 4.0]],\n",
+      "          'names::string': ['john', 'eric', 'judith', 'mila', 'hector'],\n",
       "          'unique': True}}\n",
       "True\n"
      ]
@@ -834,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c36ec385",
+   "id": "98dce36c",
    "metadata": {},
    "outputs": [
     {
