--- a/example/example_table_pandas.ipynb
+++ b/example/example_table_pandas.ipynb
@@ -41,8 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import sys\n",
+    "import os, sys\n",
     "os.path\n",
     "sys.path.insert(0, 'C:\\\\Users\\\\phili\\\\github\\\\ntv-pandas')"
    ]
@@ -675,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "2ebb28a0",
    "metadata": {},
    "outputs": [
@@ -773,7 +772,7 @@
        "500  1985-02-05     30       32   20  POINT (3 4)  hector    True"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "7977522d",
    "metadata": {},
    "outputs": [
@@ -822,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "98dce36c",
    "metadata": {},
    "outputs": [
