--- a/example/example_ntv_pandas.ipynb
+++ b/example/example_ntv_pandas.ipynb
@@ -42,6 +42,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "7114708f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, sys\n",
+    "os.path\n",
+    "sys.path.insert(0, 'C:\\\\Users\\\\phili\\\\github\\\\ntv-pandas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "d00a0cb6",
    "metadata": {},
    "outputs": [],
@@ -75,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "87e08572",
    "metadata": {
     "scrolled": false
@@ -197,7 +209,7 @@
        "600    2022-01-21   True       32        1  POINT (5 6)   maria          2021"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c37108e8",
    "metadata": {},
    "outputs": [
@@ -260,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0e9736c8",
    "metadata": {},
    "outputs": [
@@ -376,7 +388,7 @@
        "600  2022-01-21   True       32        1  POINT (5 6)   maria          2021"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "62319579",
    "metadata": {},
    "outputs": [
@@ -448,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a556868a",
    "metadata": {},
    "outputs": [
@@ -488,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "765f0396",
    "metadata": {},
    "outputs": [
@@ -523,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "327c67a9",
    "metadata": {},
    "outputs": [
@@ -564,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "6ba57f0a",
    "metadata": {},
    "outputs": [
@@ -601,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7e45d94d",
    "metadata": {},
    "outputs": [
@@ -635,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a4a756e7",
    "metadata": {},
    "outputs": [
@@ -688,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "ac890bcb",
    "metadata": {},
    "outputs": [
@@ -738,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "fe6c69cb",
    "metadata": {},
    "outputs": [
@@ -806,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "cdda0ce3",
    "metadata": {
     "scrolled": false
@@ -844,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "22b7a281",
    "metadata": {
     "scrolled": false
@@ -884,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "d7eb51ea",
    "metadata": {
     "scrolled": false
@@ -947,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "a3565bed",
    "metadata": {},
    "outputs": [
@@ -1017,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "270354b3",
    "metadata": {},
    "outputs": [
@@ -1121,7 +1133,7 @@
        "7    10 kg  peppers  vegetable  15.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "40d718be",
    "metadata": {},
    "outputs": [
@@ -1540,8 +1552,8 @@
        "Coordinates:\n",
        "  * quantity  (quantity) object &#x27;1 kg&#x27; &#x27;10 kg&#x27;\n",
        "  * product   (product) object &#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;\n",
-       "    plants    (product) object &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'price'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>quantity</span>: 2</li><li><span class='xr-has-index'>product</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-cc042c89-b2c8-47b6-ad32-44f3dc222c8f' class='xr-array-in' type='checkbox' checked><label for='section-cc042c89-b2c8-47b6-ad32-44f3dc222c8f' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.5 2.0 1.0 1.5 5.0 20.0 10.0 15.0</span></div><div class='xr-array-data'><pre>array([[0.5, 2.0, 1.0, 1.5],\n",
-       "       [5.0, 20.0, 10.0, 15.0]], dtype=object)</pre></div></div></li><li class='xr-section-item'><input id='section-868c9930-0989-4209-a1e8-33d615311e20' class='xr-section-summary-in' type='checkbox'  checked><label for='section-868c9930-0989-4209-a1e8-33d615311e20' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>quantity</span></div><div class='xr-var-dims'>(quantity)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;1 kg&#x27; &#x27;10 kg&#x27;</div><input id='attrs-c0fe7ef5-573b-4a98-b177-5a54e09bfa6a' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c0fe7ef5-573b-4a98-b177-5a54e09bfa6a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-93b2b39b-32d7-45db-b9fc-19cf7772a7cf' class='xr-var-data-in' type='checkbox'><label for='data-93b2b39b-32d7-45db-b9fc-19cf7772a7cf' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>product</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;</div><input id='attrs-8890e215-e069-430f-8fae-d99021ae2358' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-8890e215-e069-430f-8fae-d99021ae2358' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e60fcfa1-e1a3-464e-94fc-5a0ae9f114ed' class='xr-var-data-in' type='checkbox'><label for='data-e60fcfa1-e1a3-464e-94fc-5a0ae9f114ed' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>plants</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</div><input id='attrs-adaafc93-8fad-4faf-ae61-be15e35194ac' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-adaafc93-8fad-4faf-ae61-be15e35194ac' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-2a9c8e3f-6499-4ff3-ba75-76b0a81e0836' class='xr-var-data-in' type='checkbox'><label for='data-2a9c8e3f-6499-4ff3-ba75-76b0a81e0836' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;vegetable&#x27;], dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-e59af9dc-8574-4bef-9ad1-eeb60822141d' class='xr-section-summary-in' type='checkbox'  ><label for='section-e59af9dc-8574-4bef-9ad1-eeb60822141d' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>quantity</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-09311d06-3113-4991-8fa0-c88306dc2ff7' class='xr-index-data-in' type='checkbox'/><label for='index-09311d06-3113-4991-8fa0-c88306dc2ff7' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=&#x27;object&#x27;, name=&#x27;quantity&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>product</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-862c6317-2060-4e47-94a7-b9b314c4d64a' class='xr-index-data-in' type='checkbox'/><label for='index-862c6317-2060-4e47-94a7-b9b314c4d64a' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=&#x27;object&#x27;, name=&#x27;product&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-26688c0b-c27c-443e-be60-655958a829bb' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-26688c0b-c27c-443e-be60-655958a829bb' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "    plants    (product) object &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'price'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>quantity</span>: 2</li><li><span class='xr-has-index'>product</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-090c02bc-a59c-4c86-95c8-d3eed4270d4e' class='xr-array-in' type='checkbox' checked><label for='section-090c02bc-a59c-4c86-95c8-d3eed4270d4e' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.5 2.0 1.0 1.5 5.0 20.0 10.0 15.0</span></div><div class='xr-array-data'><pre>array([[0.5, 2.0, 1.0, 1.5],\n",
+       "       [5.0, 20.0, 10.0, 15.0]], dtype=object)</pre></div></div></li><li class='xr-section-item'><input id='section-4c0f29cb-410c-42ea-b4fd-d704c54f4e9f' class='xr-section-summary-in' type='checkbox'  checked><label for='section-4c0f29cb-410c-42ea-b4fd-d704c54f4e9f' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>quantity</span></div><div class='xr-var-dims'>(quantity)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;1 kg&#x27; &#x27;10 kg&#x27;</div><input id='attrs-efb76baa-9357-4dae-bc97-901e24558419' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-efb76baa-9357-4dae-bc97-901e24558419' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-3ffbee8e-6339-4989-b62d-2323b36e9ef9' class='xr-var-data-in' type='checkbox'><label for='data-3ffbee8e-6339-4989-b62d-2323b36e9ef9' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>product</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;</div><input id='attrs-1ba660cd-42ae-422c-9605-59a5b53d336e' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-1ba660cd-42ae-422c-9605-59a5b53d336e' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-eba9d806-9277-4c0a-81e0-0155f4a096ef' class='xr-var-data-in' type='checkbox'><label for='data-eba9d806-9277-4c0a-81e0-0155f4a096ef' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>plants</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</div><input id='attrs-99338007-a0fe-4a22-b76a-6a29694dbd77' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-99338007-a0fe-4a22-b76a-6a29694dbd77' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f1fdaf1e-4df4-4c95-acec-f741545bc202' class='xr-var-data-in' type='checkbox'><label for='data-f1fdaf1e-4df4-4c95-acec-f741545bc202' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;vegetable&#x27;], dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-8a3bf53b-d2c7-4529-92b7-0ee9bf12b374' class='xr-section-summary-in' type='checkbox'  ><label for='section-8a3bf53b-d2c7-4529-92b7-0ee9bf12b374' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>quantity</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-d08a92c0-5954-4a72-96f5-5d9cd221f39a' class='xr-index-data-in' type='checkbox'/><label for='index-d08a92c0-5954-4a72-96f5-5d9cd221f39a' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=&#x27;object&#x27;, name=&#x27;quantity&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>product</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-ae7ecee6-6d35-4d0e-9758-b47db23a7550' class='xr-index-data-in' type='checkbox'/><label for='index-ae7ecee6-6d35-4d0e-9758-b47db23a7550' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=&#x27;object&#x27;, name=&#x27;product&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c4e39829-bc49-4486-8a82-08555b8161b5' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-c4e39829-bc49-4486-8a82-08555b8161b5' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'price' (quantity: 2, product: 4)>\n",
@@ -1553,7 +1565,7 @@
        "    plants    (product) object 'fruit' 'fruit' 'fruit' 'vegetable'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "5f07553d",
    "metadata": {
     "scrolled": false
@@ -1689,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "090ad57b",
    "metadata": {},
    "outputs": [
@@ -1741,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "a878011a",
    "metadata": {},
    "outputs": [
@@ -1790,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "fc5c1c1f",
    "metadata": {
     "scrolled": false
@@ -1800,10 +1812,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False True {\":field\": [null, null]}\n",
-      "False True {\":field\": [null, null]}\n",
-      "True False {\":field\": {\"::uint64\": [1, 2, 3]}}\n",
-      "False True {\":field\": [\"2022-01-01T00:00:00.000\", \"2022-01-02T00:00:00.000\", \"2022-01-03T00:00:00.000\"]}\n"
+      "False True {':field': [None, None]}\n",
+      "False True {':field': [None, None]}\n",
+      "True False {':field': {'::uint64': [1, 2, 3]}}\n",
+      "False True {':field': ['2022-01-01T00:00:00.000', '2022-01-02T00:00:00.000', '2022-01-03T00:00:00.000']}\n"
      ]
     }
    ],
@@ -1829,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "0319c881",
    "metadata": {},
    "outputs": [
