--- a/example/example_table_pandas.ipynb
+++ b/example/example_table_pandas.ipynb
@@ -37,18 +37,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2bd336cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os, sys\n",
-    "os.path\n",
-    "sys.path.insert(0, 'C:\\\\Users\\\\phili\\\\github\\\\ntv-pandas')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "d00a0cb6",
    "metadata": {},
    "outputs": [],
@@ -82,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "87e08572",
    "metadata": {
     "scrolled": false
@@ -144,7 +132,7 @@
        "2         2025-02-28   POINT (4.9 45.8)  walter.white@breaking.com"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c37108e8",
    "metadata": {},
    "outputs": [
@@ -190,7 +178,7 @@
     }
    ],
    "source": [
-    "df_to_table = npd.to_json(df, table=True)\n",
+    "df_to_table = df.npd.to_json(table=True)\n",
     "pprint(df_to_table, width=140, sort_dicts=False)"
    ]
   },
@@ -204,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0e9736c8",
    "metadata": {},
    "outputs": [
@@ -271,7 +259,7 @@
        "2         2025-02-28   POINT (4.9 45.8)  walter.white@breaking.com"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "62319579",
    "metadata": {},
    "outputs": [
@@ -332,7 +320,7 @@
     "sr = pd.Series([1, 2, 3], name='value')\n",
     "print('pandas object :\\n' + str(sr))\n",
     "\n",
-    "json_table = npd.to_json(sr, table=True)\n",
+    "json_table = sr.npd.to_json(table=True)\n",
     "print('\\nJson Table representation :    ')\n",
     "pprint(json_table, width=100, sort_dicts=False)\n",
     "\n",
@@ -341,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "33cb3cae",
    "metadata": {},
    "outputs": [
@@ -370,7 +358,7 @@
     "\n",
     "print('reversibility, schema field : ')\n",
     "for sr in list_sr:\n",
-    "    json_table = npd.to_json(sr, table=True)\n",
+    "    json_table = sr.npd.to_json(table=True)\n",
     "    print('    ', sr.equals(npd.read_json(json_table)), ', ', json_table['schema']['fields'][1])"
    ]
   },
@@ -388,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "853ca958",
    "metadata": {},
    "outputs": [
@@ -421,7 +409,7 @@
     "\n",
     "print('reversibility, schema field : ')\n",
     "for sr in list_sr:\n",
-    "    json_table = npd.to_json(sr, table=True)\n",
+    "    json_table = sr.npd.to_json(table=True)\n",
     "    print('    ', sr.equals(npd.read_json(json_table)), ', ', json_table['schema']['fields'][1])"
    ]
   },
@@ -439,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4d6b513d",
    "metadata": {},
    "outputs": [
@@ -481,7 +469,7 @@
     "\n",
     "print('reversibility, schema field : ')\n",
     "for sr in list_sr:\n",
-    "    json_table = npd.to_json(sr, table=True)\n",
+    "    json_table = sr.npd.to_json(table=True)\n",
     "    print('    ', sr.equals(npd.read_json(json_table)), ', ', json_table['schema']['fields'][1])"
    ]
   },
@@ -497,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "599ea7ec",
    "metadata": {},
    "outputs": [
@@ -525,7 +513,7 @@
     "\n",
     "print('reversibility, schema field : ')\n",
     "for sr in list_sr:\n",
-    "    json_table = npd.to_json(sr, table=True)\n",
+    "    json_table = sr.npd.to_json(table=True)\n",
     "    print('    ', sr.equals(npd.read_json(json_table)), ', ', json_table['schema']['fields'][1])"
    ]
   },
@@ -540,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ac890bcb",
    "metadata": {
     "scrolled": false
@@ -668,13 +656,13 @@
     "        'ex13::line':     [LineString([[1, 2], [2, 4]]), LineString([[1, 2], [2, 5]]), LineString([[1, 2], [2, 6]])]           \n",
     "})\n",
     "print('\\nJson Table representation :    ')\n",
-    "pprint(npd.to_json(df, table=True), width=100, sort_dicts=False)\n",
-    "print('\\nis Json translation reversible ? ', df.equals(npd.read_json(npd.to_json(df, table=True))))"
+    "pprint(df.npd.to_json(table=True), width=100, sort_dicts=False)\n",
+    "print('\\nis Json translation reversible ? ', df.equals(npd.read_json(df.npd.to_json(table=True))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2ebb28a0",
    "metadata": {},
    "outputs": [
@@ -772,7 +760,7 @@
        "500  1985-02-05     30       32   20  POINT (3 4)  hector    True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "7977522d",
    "metadata": {},
    "outputs": [
@@ -814,14 +802,14 @@
     }
    ],
    "source": [
-    "df_to_json = npd.to_json(df)\n",
+    "df_to_json = df.npd.to_json()\n",
     "pprint(df_to_json, compact=True, width=120, sort_dicts=False)\n",
     "print(npd.read_json(df_to_json).equals(df))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "98dce36c",
    "metadata": {},
    "outputs": [
@@ -852,7 +840,7 @@
     }
    ],
    "source": [
-    "df_to_table = npd.to_json(df, table=True)\n",
+    "df_to_table = df.npd.to_json(table=True)\n",
     "pprint(df_to_table['data'][0], sort_dicts=False)\n",
     "pprint(df_to_table['schema'], sort_dicts=False)\n",
     "print(npd.read_json(df_to_table).equals(df))"
